name:                ragnarok

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Jan Sipr
maintainer:          sipr.jan@gmail.com
category:            Network
build-type:          Simple
copyright:           Copyright: (c) 2015 Jan Sipr

cabal-version:       >=1.10


library
  exposed-modules:
    Network.SIP.Parser.Header
    Network.SIP.Parser.Uri
    Network.SIP.Parser.RequestMethod
    Network.SIP.Type.Header
    Network.SIP.Type.Request
    Network.SIP.Type.RequestMethod
    Network.SIP.Type.Response
    Network.SIP.Type.ResponseStatus
    Network.SIP.Type.Uri

  -- other-modules:

  -- other-extensions:

  build-depends:
      base >=4.8 && <4.9
    , attoparsec
    , bytestring
    , case-insensitive
    , text
    , network-uri

  hs-source-dirs:      src

  default-language:    Haskell2010

  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-missing-import-lists
    -fwarn-implicit-prelude

test-suite unit-tests
  hs-source-dirs:       src, test
  type:                 exitcode-stdio-1.0
  main-is:              unit-tests.hs

  other-modules:
    Network.SIP.Parser.Header
    Network.SIP.Parser.RequestMethod
    Network.SIP.Parser.Uri
    Network.SIP.Type.Header
    Network.SIP.Type.Request
    Network.SIP.Type.RequestMethod
    Network.SIP.Type.Response
    Network.SIP.Type.ResponseStatus
    Network.SIP.Type.Uri

  default-language:     Haskell2010
  other-extensions:
    NoImplicitPrelude

  build-depends:
      base >=4.6 && <4.9
    , attoparsec
    , bytestring
    , case-insensitive
    , network-uri
    , text

    -- {{{ Test-suite dependencies --------------------------------------------
    , HUnit >= 1.2 && < 2
    , QuickCheck >= 2.4 && < 2.9
    -- ^ Same bounds as test-framework-quickcheck2 0.3.0.
    , quickcheck-instances >= 0.3.6 && < 0.4
    -- ^ 0.3.6 is the first version that has instances for unordered-containers
    , test-framework >= 0.8 && < 1
    , test-framework-hunit >= 0.2.6
    , test-framework-quickcheck2 >= 0.3
    -- }}} Test-suite dependencies --------------------------------------------

  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-missing-import-lists
    -fwarn-implicit-prelude
  cpp-options:          -DEXPORT_INTERNALS
